--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
 	"dependencies": {
 		"bcrypt": "^5.0.1",
 		"cookie-parser": "~1.4.4",
+		"cors": "^2.8.5",
 		"debug": "~2.6.9",
-		"express": "~4.16.1",
+		"express": "^4.18.2",
+		"express-rate-limit": "^7.1.5",
+		"helmet": "^7.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"morgan": "~1.9.1",
 		"pg": "^8.11.3",
